--- a/src/sass/pages/_snoozed.scss
+++ b/src/sass/pages/_snoozed.scss
@@ -24,12 +24,6 @@
         animation-duration: .5s;
         animation-timing-function: ease-out;  
         
-        &--heading {
-            @include gradient-text;
-            font-size: 2.5rem;
-            margin-bottom:.5rem;
-        }
-        
         &--paragraph {
             font-size: 1.5rem;
             letter-spacing: .03rem;
